[package]
name = "bonding_curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Required for init_if_needed accounts constraint
init-if-needed = ["anchor-lang/init-if-needed"]
# Enable Raydium CLMM migration support
migration = ["raydium_amm_v3"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["metadata"] }

# Raydium CLMM – used in the migrate instruction.
# Pinned to a stable Raydium CLMM release compatible with anchor 0.30+
raydium_amm_v3 = { git = "https://github.com/raydium-io/raydium-clmm", rev = "master", features = ["cpi"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values(\"solana\"))'] }
